--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
 .App {
   text-align: center;
+  background:black;
+  height:100vh;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+justify-content:space-evenly;
+color:#fff;
+}
+.nav_div{
+    width:99%;
+    height:10%;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
+.body{
+background: #fff;
+    width:99%;
+    height:85%;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
+.nav{
+width:99%;
+    height:100%;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+}
+.nav-left{
+    width:68%;
+    height:100%;
+    display:flex;
+    flex-direction:row;
+    align-items:center;
+    gap:3%;
+    justify-content:space-between;
+    padding-right:20%;
+}
+.nav-right{
+    width:20%;
+    height:100%;
+    display:flex;
+align-items:center;
+justify-content:space-between;
+}
+h1{
+    font-size:1.4rem;
+    font-weight:700;
+    font-family:'Poppins';
+}
+span{
+    color:green;
+}
+.links-div{
+    width:38vw;
+    height:10vh;
+    padding-bottom:5%;
+}
+nav{
+    text-decoration:none;
+    list-style-type:none;
+    width:35vw;
+    height:10vh;
+    padding-right:5%;
+}
+ul{
+    display:flex;
+    flex-direction:row;
+    align-items:center;
+    width:100%;
+    gap:10%;
+    height:100%;
+    list-style-type:none;
+    font-family:'Inter';
+    font-weight:600;
+    font-size:1rem;
+}
+a:active{
+    background-color:white;
+    color:black;
+    height:80%;
+    width:15%;
+    cursor:pointer;
+}
+.dashboard{
+    width:12vw;
+    border-radius:0.3rem;
+    height:5vh;
+    background-color:white;
+    color:black;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
+.profile-img{
+    border-radius:0.2rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
